feat: Add Docker Compose configuration for app, worker, and beat services

--- a/Deployment/app/Dockerfile
+++ b/Deployment/app/Dockerfile
@@ -8,4 +8,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5123
 
-CMD ["python", "run --server.port 5123 main.py"]
+RUN python setup_db.py
+
+CMD ["sh", "-c", "cd app && streamlit run --server.port 5123 main.py"]
+
+
