--- a/Deployment/app/requirements.txt
+++ b/Deployment/app/requirements.txt
@@ -13,9 +13,11 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 exceptiongroup==1.2.2
+flower==2.0.1
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
+humanize==4.10.0
 idna==3.8
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -30,6 +32,7 @@ outcome==1.3.0.post0
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
+prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 protobuf==5.27.3
 pyarrow==17.0.0
@@ -37,6 +40,7 @@ pydeck==0.9.1
 Pygments==2.18.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2024.1
 redis==5.0.8
 referencing==0.35.1
