fix: Workers are able to acess the same database now

--- a/Deployment/app/Dockerfile
+++ b/Deployment/app/Dockerfile
@@ -8,8 +8,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5123
 
-RUN python setup_db.py
-
-CMD ["sh", "-c", "cd app && streamlit run --server.port 5123 main.py"]
+CMD ["streamlit", "run", "--server.port", "5123", "main.py"]
 
 
