--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - DATABASE_PATH=./database.db
     ports:
       - "5123:5123"
+    volumes:
+      - .:/app
 
   worker:
     container_name: book-looker-worker
@@ -19,6 +21,8 @@ services:
       - DATABASE_PATH=./database.db
       - BROKER_URL=redis://redis:6379/0
     command: ["celery", "-A", "celery", "worker", "--loglevel=info"]
+    volumes:
+      - .:/app
 
   beat:
     container_name: book-looker-beat
@@ -29,4 +33,6 @@ services:
       - DATABASE_PATH=./database.db
       - BROKER_URL=redis://redis:6379/0
     command: ["celery", "-A", "celery", "beat",  "--loglevel=info"]
+    volumes:
+      - .:/app
 
